# ChangeLog for dev-java/glassfish-servlet-api
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Ebuild cleanups, fixes, and other refinements

  27 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Corrected EANT_EXTRA_ARGS

  27 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Updated home page, compiles & installs now :). Might need to make patch for
  examples but otherwise should be good to go to tree.

  16 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Initial ebuild for glassfish serlvet api
