@@ -1,4 +1,4 @@
 AUX build_xml.patch 438 RMD160 30fe4b47443b576dcb6335cf25aa79aebdc72481 SHA1 6d7fe08bc2eaa99addea7abc12eaed6f85dffcb3 SHA256 4311fa6e1eb6bb78c03f9df6a97718a5eef7a49b91e989cb1fda18cd29797ffe
 DIST glassfish-v2-b44-src.zip 35200817 RMD160 9cd872a2238b7bb249c4baaa9c528ac1d4cdd735 SHA1 1db928168a9f844eff5b14271d7464ecacd2d8b7 SHA256 331f6a65aa94b9d79f5b0a726d71afc4726032b3e9d62f2c7ab6fc679790e1b7
-EBUILD glassfish-servlet-api-2_beta44.ebuild 1003 RMD160 ae0eedb6d6889ef23eba93d8ce2482745859ae6e SHA1 0271a9e9852202dba405084e24672188e3c78231 SHA256 76f6dbfc1a616adbe82df85320457898efd13f392cc7007397e670826c0921fd
-MISC ChangeLog 659 RMD160 e1c31838b2f5956485bc1417ff4fe8f873fe1423 SHA1 9e0ebbd276e6e6ec5b2a19e660a380c94c2088f7 SHA256 78891a666665a5706259a650f54c9453738ac4a8747f8d6f38748812b5963a2a
+EBUILD glassfish-servlet-api-2_beta44.ebuild 963 RMD160 cace728609e2c98f184b41d556131640ce3e8fd4 SHA1 5c5deac7930ce28c7bb68fb350f6f2cd3cc3663b SHA256 e4ea8554810252031471ef2737551d39586f19e4894d431e042bb8c6ed45dfd5
+MISC ChangeLog 773 RMD160 68115234d3f0deb467a65c71e3265c4746f6ac76 SHA1 b0fda7172eac906911e6b0baca246d4f662e2f0e SHA256 43da581105839d94e336417b3505feca3b3b810d2a6054ef8c9e7e58109d2b9b
