@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
+  glassfish-servlet-api-2_beta44.ebuild:
+  Use base.eclass.
+
   27 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
   Ebuild cleanups, fixes, and other refinements
 
